--- a/index.css
+++ b/index.css
@@ -1,7 +1,16 @@
 body{
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
     background-image: url(http://staff.hamk.fi/~tsaksa/temp/background-image.jpg);
     background-size: cover;
-    margin: ;
+}
+
+header nav {
+    padding: 10px 20px;
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
 }
 
 
