--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ body{
 header nav {
     padding: 10px 20px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: end;
     gap: 20px;
     list-style-type: none;
 
@@ -20,6 +20,7 @@ header nav {
 header nav a{
     text-decoration: none;
     font-weight: bold;
+    font-size: larger;
 }
 
 main{
@@ -80,5 +81,6 @@ footer {
     margin-top: 20px;
     font-size: 0.9rem;
     text-align: center;
+    font-weight: bold;
 
 }
