--- a/index.css
+++ b/index.css
@@ -6,13 +6,22 @@ body{
     background-size: cover;
 
 }
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+    /* background-color: bisque; */
+
+    
+}
 
 
 header nav {
-    padding: 10px 20px;
+    /* padding: 10px 20px; */
     display: flex;
     justify-content: end;
-    gap: 20px;
+    gap: 30px;
     list-style-type: none;
 
 }
@@ -82,5 +91,17 @@ footer {
     font-size: 0.9rem;
     text-align: center;
     font-weight: bold;
+    background-color: bisque;
+    text-decoration: none;
 
+
+   
+} 
+footer div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+    text-decoration: none;
+    /* background-color: bisque; */
 }
