--- a/index.css
+++ b/index.css
@@ -2,7 +2,8 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url(http://staff.hamk.fi/~tsaksa/temp/background-image.jpg);
+    /* background-image: url(http://staff.hamk.fi/~tsaksa/temp/background-image.jpg); */
+    background-image: url(images/background-image.jpg);
     background-size: cover;
 
 }
